tests/ui/associated-types/associated-types-eq-expr-path.stderr
error[E0229]: associated item constraints are not allowed here
  --> $DIR/associated-types-eq-expr-path.rs:14:26
   |
LL |     let x: isize = Foo::<A = usize>::bar();
   |                          ^^^^^^^^^ associated item constraint not allowed here

error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> $DIR/associated-types-eq-expr-path.rs:14:20
   |
LL |     fn bar() -> isize;
   |     ------------------ `Foo::bar` defined here
...
LL |     let x: isize = Foo::<A = usize>::bar();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ cannot call associated function of trait
   |
help: use the fully-qualified path to the only available implementation
   |
LL -     let x: isize = Foo::<A = usize>::bar();
LL +     let x: isize = <isize as Foo<A = usize>>::bar();
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0229, E0790.
For more information about an error, try `rustc --explain E0229`.
